add gradle build instructions